Refactor code to use List.of() for immutable list creation and improve console output formatting